# MegaDriveStudio

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  setup.sh
.github/workflows/: build.yml  ide.yml  phase2.yml  release.yml  toolchain-cache.yml
docker/: Dockerfile
docs/: 02-m5-architecture.md
examples/hello-world/: Makefile  README.md
examples/hello-world/res/: .gitkeep
examples/hello-world/src/: main.c
extensions/megadrive-studio/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/megadrive-studio-pack/: .vscodeignore  CHANGELOG.md  README.md  package.json
extensions/megadrive-studio/src/: extension.ts  mcp.ts  views.ts
extensions/megadrive-studio/src/views/: breakpoints.ts  control.ts  launcher.ts  m68k-regs.ts  memory.ts  planes.ts  screen.ts  vdp-regs.ts
mds-mcp/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
mds-mcp/src/: emulator.rs  ffi.rs  main.rs  notifications.rs  resources.rs  server.rs  tools.rs  transport.rs
mds-mcp/src/emulator/: breakpoints.rs  debug_api.rs  decode.rs  frame.rs  input.rs  memory.rs  mod.rs  runner.rs
mds-mcp/src/tools/: mod.rs
mds-mcp/tests/: breakpoints.rs  e2e.rs  edpro_replay.rs  edpro_serial_smoke.rs  notifications.rs  smoke.rs  target_edpro_stub.rs  z80.rs
mds-mcp/tests/common/: mod.rs
mds-mcp/tests/fixtures/edpro/: README.md
mds-stub-68k/: Makefile  README.md  link.ld.frag  mdsstub.ld
mds-stub-68k/include/: mds_stub.h
mds-stub-68k/src/: bp.c  bp.h  entry.s  rsp.c  rsp.h  save_regs.s  stub.c  usb.c  usb.h  vectors.s
scripts/: claude-build-assist.py  gdb-proxy.py  kdebug-monitor.sh
scripts/claude-skills/: m68k.md  megadrive.md  sgdk.md  z80.md
tools/: Makefile  dump_vram.c
