# SPDX-License-Identifier: MIT
[package]
name = "mds-mcp"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rtissera/MegaDriveStudio"
description = "MCP server bridging libretro emulators (clownmdemu) and Mega Drive hardware (Mega Everdrive Pro) for VS Code and LLM clients."
authors = ["Megadrive Studio"]

[[bin]]
name = "mds-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
] }
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "time",
    "net",
    "io-util",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.95"
thiserror = "2.0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
base64 = "0.22.1"
parking_lot = "0.12.5"
schemars = "0.8.21"
crc32fast = "1.4.2"
clap = { version = "4.5.20", features = ["derive"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "process"] }

[build-dependencies]
bindgen = "0.72.1"
