# SPDX-License-Identifier: MIT
[package]
name = "mds-mcp"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rtissera/MegaDriveStudio"
description = "MCP server bridging libretro emulators (clownmdemu) and Mega Drive hardware (Mega Everdrive Pro) for VS Code and LLM clients."
authors = ["Megadrive Studio"]

[[bin]]
name = "mds-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
] }
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "time",
    "net",
    "io-util",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.95"
thiserror = "2.0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
base64 = "0.22.1"
parking_lot = "0.12.5"
schemars = "0.8.21"
crc32fast = "1.4.2"
clap = { version = "4.5.20", features = ["derive"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
bytes = "1.8"
png = "0.17"
# `async-trait` is needed because `EdProTarget` stores its transport as
# `Box<dyn UsbTransport>` and native async-fn-in-trait isn't dyn compatible
# (E0038). Cost is one allocation per call which is dwarfed by USB latency.
async-trait = "0.1"
# Async serial transport for the EdPro target (M5.5b). Pinned to 5.4.x —
# the only line that works with tokio 1.x and ships AsyncRead/AsyncWrite
# on `SerialStream` for Linux (termios), macOS (IOKit) and Windows (COM).
# License: MIT. Picked over `serialport` (sync, would force
# spawn_blocking on every read/write) and hand-rolled termios (Linux-only).
# Baud is irrelevant on the EdPro (USB-CDC ignores it) but we mirror
# `ricky26/megalink-rs` (`serialport::new(path, 9600)`) for consistency.
tokio-serial = "5.4"
# ELF parser used to extract SGDK's work-RAM symbol addresses (M5.8a).
# We only need the .symtab from a static-linked m68k ELF, so disable the
# heavy default features (compression, wasm, mach-o, pe...) to keep the
# dep tree small. `read_core` + `elf` give us `ElfFile32` and big-endian
# parsing — m68k ROMs are always BE 32-bit.
object = { version = "0.36", default-features = false, features = ["std", "read_core", "elf"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "process"] }
# Re-pull `object` with its writer enabled so unit tests can synthesise
# minimal m68k ELFs in memory (no on-disk fixtures, no marsdev dep) to
# round-trip the .symtab parser. Production code only needs the reader,
# kept above with default-features off.
object = { version = "0.36", features = ["std", "read_core", "elf", "write_core", "write_std"] }

[build-dependencies]
bindgen = "0.72.1"
